# mapreduce

./: .gitignore  Makefile  README.md  pyproject.toml
mapreduce/coordinator/: coordinator.py
mapreduce/coordinator/models/: status.py  task.py
mapreduce/models/: key_value.py  status.py  task.py  type.py
mapreduce/tasks/: indexer.py  word_count.py
mapreduce/worker/: worker.py
